fix(*): various fixes to css, issues with invitation count overflow, text-shadow

--- a/app/packs/styles/base_styles.scss
+++ b/app/packs/styles/base_styles.scss
@@ -39,7 +39,7 @@ $landing-navbar-height: 63px;
 $sidebar-lg-width: 280px;
 $sidebar-width: 78px;
 $footer-height: 145px;
-$topbar-height: 57px;
+$topbar-height: 60px;
 
 $roamio-text-spacing: 0.5px;
 
